# subversive

./: .gitignore  Cargo.toml  README.md  quicksave.json  subversive_save.json  summary.md
assets/attachments/: tier1.json
assets/scenes/: mission1.json
data/: _research.json  campaign.json  cities.json  cybernetics.json  lore.json  research.json  traits.json  weapons.json
data/attachments/: tier1.json  tier2.json  tier3.json
data/config/: cursor_settings.json  game.json  police_config.ron
scenes/: mission1.json  mission2.json  mission3.json  mission_syndicate.json  mission_underground.json
src/: components.rs  events.rs  lib.rs  main.rs  resources.rs  states.rs  systems.rs
src/core/: agent_upgrades.rs  attachments.rs  audio.rs  campaign_database.rs  campaign_extended.rs  cities.rs  collision_groups.rs  components.rs  config.rs  despawn.rs  entities.rs  events.rs  factions.rs  fonts.rs  game_state.rs  goap.rs  goap_config.rs  goap_extensions.rs  hackable.rs  input.rs  lore.rs  missions.rs  mod.rs  research.rs  resources.rs  scene_cache.rs  spawn_damage_text.rs  sprites.rs  territory.rs  weapons.rs
src/data/: goap_actions.rs  goap_goals.rs
src/systems/: __neurovector.rs  __ui.rs  access_control.rs  advanced_prompts.rs  agent_traits.rs  ai.rs  area_control.rs  camera.rs  civilian_spawn.rs  colored_lighting.rs  colored_lighting_spawn.rs  combat.rs  cover.rs  cursor.rs  cursor_enhancements.rs  day_night.rs  death.rs  decals.rs  enhanced_neurovector.rs  enhanced_pathfinding.rs  explosion_decal_integration.rs  explosions.rs  formations.rs  hacking_feedback.rs  hacking_financial.rs  health_bars.rs  ice.rs  input.rs  interaction.rs  interaction_prompts.rs  interactive_decals.rs  interactive_decals_demo.rs  isometric_camera.rs  message_window.rs  minimap.rs  mission.rs  mod.rs  morale.rs  movement.rs  neurovector.rs  (+34 more)
src/systems/ui/: builder.rs  credits.rs  enhanced_inventory.rs  fps.rs  hub.rs  (+13 more)
src/ui_iced/: integration.rs  inventory.rs  mod.rs  research.rs  singapore_map.rs  sync_systems.rs
ui_layouts/: credits.json  settings.json
(+11 files in other folders)
