[package]
name = "subversive"
version = "0.2.4"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "track_location"] }
bevy_light_2d = "0.7.0"
bevy_rapier2d = "0.30"

bevy_mod_imgui = "0.7.1"
imgui = "0.12.0"

leafwing-input-manager = "0.17.1"
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

steamworks = "0.12.0"
fastrand = "2.3.0"
ron = "0.10.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unused_variables = "allow"
# unused_imports = "allow"
dead_code = "allow"
